[gd_scene load_steps=15 format=3 uid="uid://c3kylks048cvw"]

[ext_resource type="Theme" uid="uid://ddpvdh1tvpifa" path="res://Theme.tres" id="1_0owl6"]
[ext_resource type="Script" uid="uid://ccqs633g5bqb5" path="res://scripts/main.gd" id="1_nivy1"]
[ext_resource type="Texture2D" uid="uid://b8os0vuvh4x0u" path="res://textures/AtlasPinnedOn.tres" id="4_vb1do"]
[ext_resource type="Texture2D" uid="uid://dd0sp8ex51krr" path="res://textures/AtlasPinnedOff.tres" id="5_e8osf"]
[ext_resource type="Texture2D" uid="uid://bq0h6cwswmh54" path="res://textures/ddm1.png" id="5_wol0k"]
[ext_resource type="FontFile" uid="uid://bniodwyreatpq" path="res://fonts/AsepriteFont.ttf" id="6_4c57u"]
[ext_resource type="Texture2D" uid="uid://g1w45iqmfp4j" path="res://textures/ddm2.png" id="6_8n218"]
[ext_resource type="Texture2D" uid="uid://cg5026mp0ptw8" path="res://textures/AtlasFileSelect.tres" id="7_2v3e4"]
[ext_resource type="Shader" uid="uid://drwfv1ayr5iwa" path="res://waveform_posteriorize.gdshader" id="8_gvu2m"]
[ext_resource type="Texture2D" uid="uid://bqephtxnm5sks" path="res://textures/ddm3.png" id="9_efxa6"]
[ext_resource type="Texture2D" uid="uid://us3pvooixgfx" path="res://textures/ase-export.png" id="9_kek77"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b1hkj"]
shader = ExtResource("8_gvu2m")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4c57u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ovwfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_wol0k")
}, {
"duration": 1.0,
"texture": ExtResource("6_8n218")
}, {
"duration": 1.0,
"texture": ExtResource("5_wol0k")
}, {
"duration": 1.0,
"texture": ExtResource("6_8n218")
}, {
"duration": 1.0,
"texture": ExtResource("5_wol0k")
}, {
"duration": 1.0,
"texture": ExtResource("6_8n218")
}, {
"duration": 1.0,
"texture": ExtResource("5_wol0k")
}, {
"duration": 1.0,
"texture": ExtResource("6_8n218")
}, {
"duration": 0.2,
"texture": ExtResource("9_efxa6")
}, {
"duration": 1.0,
"texture": ExtResource("5_wol0k")
}, {
"duration": 1.0,
"texture": ExtResource("6_8n218")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0owl6")
script = ExtResource("1_nivy1")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.329412, 0.376471, 1)

[node name="ColorRect2" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -3.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.25098, 0.25098, 0.168627, 1)

[node name="ColorRect3" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MainMenu"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu/Control"]
layout_mode = 1
offset_left = 3.0
offset_top = -2.0
offset_right = 165.0
offset_bottom = 18.0
text = "ASEPRITE AUDIO EXTENSION v2.2.1"

[node name="Title" type="Label" parent="MainMenu/Control/Title"]
show_behind_parent = true
layout_mode = 0
offset_top = 1.0
offset_right = 162.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.776471, 1)
text = "ASEPRITE AUDIO EXTENSION v2.2.1
"

[node name="StatusText" type="Label" parent="MainMenu/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 36.0
offset_right = 165.0
offset_bottom = 48.0
text = "No audio selected."

[node name="InfoText" type="Label" parent="MainMenu/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 47.0
offset_right = 165.0
offset_bottom = 59.0

[node name="LoadAudio" type="Button" parent="MainMenu/Control"]
layout_mode = 1
offset_left = 3.0
offset_top = 14.0
offset_right = 60.0
offset_bottom = 32.0
text = "Load audio"

[node name="Path" type="Label" parent="MainMenu/Control/LoadAudio"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = 145.0
offset_bottom = 14.0
grow_horizontal = 0
text = "No file selected."
autowrap_mode = 1
clip_text = true
text_overrun_behavior = 3

[node name="Setup" type="Button" parent="MainMenu/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 19.0
grow_horizontal = 0
text = "Setup"

[node name="Credits" type="Button" parent="MainMenu/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 23.0
offset_right = -1.0
offset_bottom = 41.0
grow_horizontal = 0
text = "Credits"

[node name="Export" type="Button" parent="MainMenu/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 45.0
offset_right = -1.0
offset_bottom = 63.0
grow_horizontal = 0
disabled = true
text = "Export"

[node name="Support" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -40.0
offset_right = -3.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.776471, 1)
text = "Consider supporting this tool!"
flat = true

[node name="WaveformRect" type="Control" parent="MainMenu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -22.0
offset_right = -23.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="Control" parent="MainMenu/WaveformRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MainMenu/WaveformRect/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="MainMenu/WaveformRect/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.329412, 0.376471, 1)

[node name="ColorRect3" type="ColorRect" parent="MainMenu/WaveformRect/Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.25098, 0.25098, 0.168627, 1)

[node name="WaveformParent" type="Control" parent="MainMenu/WaveformRect"]
clip_children = 1
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Waveform" type="TextureRect" parent="MainMenu/WaveformRect/WaveformParent"]
material = SubResource("ShaderMaterial_b1hkj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -3.0
offset_right = 16.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 2

[node name="PlaybackLine" type="ColorRect" parent="MainMenu/WaveformRect/WaveformParent"]
modulate = Color(1, 1, 1, 0.678431)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = -1.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PlaybackLine2" type="ColorRect" parent="MainMenu/WaveformRect/WaveformParent/PlaybackLine"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 2.0
color = Color(0, 0, 0, 1)

[node name="PlaybackLine3" type="ColorRect" parent="MainMenu/WaveformRect/WaveformParent/PlaybackLine"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.5
offset_right = 1.5
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="AlwaysOnTop2" type="CheckButton" parent="MainMenu/WaveformRect"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -1.0
offset_right = 18.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/checked = ExtResource("4_vb1do")
theme_override_icons/unchecked = ExtResource("5_e8osf")
icon_alignment = 1

[node name="HelpMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="RichTextLabel" parent="HelpMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = -6.0
offset_bottom = 134.0
grow_horizontal = 2
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -4
theme_override_fonts/normal_font = ExtResource("6_4c57u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4c57u")
bbcode_enabled = true
text = "Thank you for downloading Aseprite Audio Extension!

If you found this tool helpful, consider [url=\"https://ddmplayer.itch.io/aseprite-audio-extension/purchase\"]donating[/url]!
Even small amounts help fund my projects.

Aseprite Audio Extension is provided for free at [url=\"https://ddmplayer.itch.io/aseprite-audio-extension\"]itch.io[/url].
If you got it from somewhere else, run! Quick!
If you found an issue, please contact me!

Aseprite Audio Extension v2.2.1 by DDMPlayer.
Aseprite font (as a .ttf) by haloflooder.
Better Processes plugin by GreenFox.
AAE v2.x is powered by the Godot 4 Engine.
Aseprite by Igara Studio.
[url=https://itch.io/post/10289107]Idea for pinning waveform by ijsje22[/url]"
scroll_active = false
autowrap_mode = 2
selection_enabled = true

[node name="DDMPlayer" type="Control" parent="HelpMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -31.0
offset_right = -38.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HelpMenu/DDMPlayer"]
modulate = Color(1, 1, 1, 0.12549)
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_ovwfn")
frame_progress = 0.474504

[node name="Back" type="Button" parent="HelpMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -27.0
offset_right = -5.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[node name="PathMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PathText" type="LineEdit" parent="PathMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 29.0
offset_right = -35.0
offset_bottom = 49.0
grow_horizontal = 2
placeholder_text = "Locate Aseprite.exe with the file picker button."

[node name="PathLabel" type="Label" parent="PathMenu/PathText"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -4.0
offset_top = -13.0
offset_right = -6.0
offset_bottom = -1.0
grow_horizontal = 2
theme_override_constants/line_spacing = -3
text = "Aseprite path:"

[node name="SelectFile" type="Button" parent="PathMenu/PathText"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 8.0
offset_right = 29.0
offset_bottom = 20.0
grow_horizontal = 0
icon = ExtResource("7_2v3e4")
icon_alignment = 1

[node name="Activate" type="Button" parent="PathMenu/PathText"]
layout_mode = 1
offset_left = -4.0
offset_top = 26.0
offset_right = 41.0
offset_bottom = 44.0
text = "Activate"

[node name="TopText" type="Label" parent="PathMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = -6.0
offset_bottom = 14.0
grow_horizontal = 2
theme_override_constants/line_spacing = -3
text = "Aseprite Audio Extension needs Aseprite's path to work."
autowrap_mode = 2

[node name="HelpText" type="Label" parent="PathMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 57.0
offset_top = 53.0
offset_right = -3.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_constants/line_spacing = -3
text = "The selected path should be an executable file, and must not contain any surrounding characters. Alternatively, use the browser to add the path.

Example: C:/path/to/Aseprite.exe"
autowrap_mode = 2
justification_flags = 35

[node name="StatusText" type="Label" parent="PathMenu"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -3
text = "The Selected path is invalid!"
autowrap_mode = 2
justification_flags = 35

[node name="Back" type="Button" parent="PathMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -27.0
offset_right = 37.0
offset_bottom = -9.0
grow_vertical = 0
text = "Back"

[node name="ExportMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="ExportMenu"]
modulate = Color(1, 1, 1, 0.247059)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_kek77")
expand_mode = 1

[node name="Text" type="Label" parent="ExportMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -18.0
offset_right = 69.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -3
text = "Exporting..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="ExportMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = 3.0
offset_right = 81.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="ExportMenu/ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.25098, 0.25098, 0.168627, 1)

[node name="ColorRect3" type="ColorRect" parent="ExportMenu/ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.329412, 0.376471, 1)

[node name="ExportProgress" type="ColorRect" parent="ExportMenu/ColorRect/ColorRect3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Dragger" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -22.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainMenu/Control/LoadAudio" to="." method="_on_load_audio_pressed"]
[connection signal="pressed" from="MainMenu/Control/Setup" to="." method="_on_setup_pressed"]
[connection signal="pressed" from="MainMenu/Control/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenu/Control/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="MainMenu/Support" to="." method="_on_help_clicked" binds= ["https://ddmplayer.itch.io/aseprite-audio-extension/purchase"]]
[connection signal="gui_input" from="MainMenu/WaveformRect/WaveformParent" to="." method="_on_control_gui_input"]
[connection signal="toggled" from="MainMenu/WaveformRect/AlwaysOnTop2" to="." method="_on_display_toggled"]
[connection signal="meta_clicked" from="HelpMenu/Text" to="." method="_on_help_clicked"]
[connection signal="pressed" from="HelpMenu/Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="PathMenu/PathText" to="." method="_on_path_text_text_changed"]
[connection signal="pressed" from="PathMenu/PathText/SelectFile" to="." method="_on_select_file_pressed"]
[connection signal="pressed" from="PathMenu/PathText/Activate" to="." method="_on_activate_pressed"]
[connection signal="pressed" from="PathMenu/Back" to="." method="_on_back_pressed"]
[connection signal="gui_input" from="Dragger" to="." method="_on_control_gui_input"]
